# fastapi-kafka-chess

./: .env.example  Dockerfile  README.MD  README.md  pyproject.toml
app/application/api/: main.py
app/application/api/chess/: handlers.py  schemas.py
app/application/dependencies/: base.py
app/domain/entities/: base.py  chess.py
app/domain/events/: chess.py
app/domain/exceptions/: base.py  chess.py
app/domain/values/: base.py  chess.py
app/infrastructure/repositories/: mongo_base.py
app/infrastructure/repositories/chess/: base.py  datamappers.py  memory.py  mongo.py
app/logic/: init.py  mediator.py
app/logic/commands/: chess.py
app/logic/events/: base.py
app/logic/exceptions/: base.py  chess.py  mediator.py
app/settings/: config.py
app/test/: fixtures.py
app/test/application/api/: conftest.py  test_chess.py
app/test/domain/values/: test_chess.py
app/test/logic/: test_chess.py
docker_compose/: app.yaml  storages.yaml
test/: conftest.py
test/domain/entities/: test_chess.py
test/logic/: conftest.py
